[package]
name = "redox-buffer-pool"
version = "0.1.0"
authors = ["4lDO2 <4lDO2@protonmail.com>"]
edition = "2018"
description = "A buffer pool library for Redox, featuring a general-purpose 32-bit allocator"
documentation = "https://docs.rs/redox-buffer-pool"
readme = "README.md"
homepage = "https://redox-os.org/"
license = "MIT"
keywords = ["redox", "buffer-pool"]
categories = ["data-structures", "memory-management"]

[features]
default = []
redox = ["redox_syscall"]

[dependencies]
cranelift-bforest = "0.65"
either = "1.5"
log = "0.4"
parking_lot = { version = "0.11", features = ["nightly"] }
redox_syscall = { git = "https://gitlab.redox-os.org/4lDO2/syscall.git", branch = "io_uring", optional = true }

[dev-dependencies]
rand = "0.7"
